--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "gatsby": "^2.19.7",
     "gatsby-background-image": "^0.9.14",
     "gatsby-image": "^2.2.40",
+    "gatsby-plugin-manifest": "^2.4.27",
+    "gatsby-plugin-offline": "^3.2.26",
     "gatsby-plugin-react-helmet": "^3.1.22",
     "gatsby-plugin-sass": "^2.1.28",
     "gatsby-plugin-sharp": "^2.4.5",
